src/clippy_output/clippy_libstdbuf.txt
error[E0601]: `main` function not found in crate `libstdbuf`
 --> src//libstdbuf.rs:1:135
  |
1 | #![allow(dead_code, mutable_transmutes, non_camel_case_types, non_snake_case, non_upper_case_globals, unused_assignments, unused_mut)]
  |                                                                                                                                       ^ consider adding a `main` function to `src//libstdbuf.rs`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0601`.
